--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
   <div class="bg-[var(--boxbg)] py-2 px-4 text-sm text-center">
     ✅ En iyi <strong>güvenilir bahis siteleri</strong> arasında yerinizi alın! 🚀
   </div>
+<div style="display: flex; justify-content: center; align-items: center; width: 100%; background-color: #151A32; padding: 10px;">
+  <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/1000x50.gif" alt="BetPuan Banner" style="max-width:100%; height:auto; border-radius:8px;">
+</div>
 
   <!-- Navigation -->
   <nav class="bg-[var(--darkbg)] shadow-lg sticky top-0 z-50">
@@ -804,6 +807,9 @@
     <a href="https://puanbetgiris.com" class="underline hover:text-yellow-300 transition">puanbetgiris.com</a> ✅
   </p>
 </section>
+<div style="display: flex; justify-content: center; align-items: center; width: 100%; background-color: #151A32; padding: 10px;">
+  <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/1000x50.gif" alt="BetPuan Banner" style="max-width:100%; height:auto; border-radius:8px;">
+</div>
 
 <!-- Domain 4 Footer with Logo, Larger App Logos & Floating CTA -->
 <footer class="bg-[var(--footerbg)] py-10 px-6 text-white text-center relative">
