--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     "url": "https://betpuanuyelik.com",
     "logo": "https://raw.githubusercontent.com/betseogalaxi/m/main/betpuan-logo.png",
     "sameAs": [
-      "https://betpuan.co",
-      "https://betpuanmobil.com",
+      "https://vip.betpuan.co",
+      "https://uyelik.betpuanmobil.com",
       "https://girisbetpuan.com",
-      "https://betpuan.bet",  
+      "https://giris.betpuan.bet",  
       "https://puanbetgiris.com"
     ],
     "description": "BetPuanUyelik.com ile güvenilir bahis siteleri arasında yer alın. Hızlı mobil giriş, deneme bonusu avantajları, lisanslı bahis sitesi deneyimi sizi bekliyor.",
@@ -797,7 +797,7 @@ Türkiye'de bahis yasağı, ülkenin sosyal ve ekonomik yapısını derinden etk
 
   <!-- Main Logo -->
   <div class="mb-6">
-    <a href="https://betpuanuyelik.com">
+    <a href="https://sitesi.betpuanuyelik.com">
       <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/logo.png" rel="nofollow" alt="BetPuan Logo" class="mx-auto w-36 md:w-48">
     </a>
   </div>
