--- a/index.html
+++ b/index.html
@@ -810,14 +810,7 @@ Türkiye'de bahis yasağı, ülkenin sosyal ve ekonomik yapısını derinden etk
 
   <!-- App Download Buttons with Larger Logos -->
   <div class="flex justify-center gap-12 mb-6 flex-wrap">
-    <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/android.png" rel="nofollow" alt="Android Logo" class="w-20 mb-2">
-      Android Uygulaması
-    </a>
-    <a href="https://2bpuan.app" target="_blank" rel="nofollow" class="flex flex-col items-center text-white hover:text-yellow-500">
-      <img src="https://raw.githubusercontent.com/betseogalaxi/m/main/ios.png" rel="nofollow" alt="iOS Logo" class="w-20 mb-2">
-      iOS Uygulaması
-    </a>
+<a href="//www.dmca.com/Protection/Status.aspx?id=c868d2a8-ed1d-4337-83e0-72df12663e0f" title="DMCA.com Protection Status" class="dmca-badge"> <img src="//images.dmca.com/Badges/dmca-badge-w150-5x1-01.png?ID=//www.dmca.com/Protection/Status.aspx?id=c868d2a8-ed1d-4337-83e0-72df12663e0f" alt="DMCA.com Protection Status"></a> <script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
   </div>
 
 <!-- Internal Navigation Links -->
