--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@ Türkiye'de bahis yasağı, ülkenin sosyal ve ekonomik yapısını derinden etk
 
   <!-- App Download Buttons with Larger Logos -->
   <div class="flex justify-center gap-12 mb-6 flex-wrap">
-<a href="//www.dmca.com/Protection/Status.aspx?id=c868d2a8-ed1d-4337-83e0-72df12663e0f" title="DMCA.com Protection Status" class="dmca-badge"> <img src="//images.dmca.com/Badges/dmca-badge-w150-5x1-01.png?ID=//www.dmca.com/Protection/Status.aspx?id=c868d2a8-ed1d-4337-83e0-72df12663e0f" alt="DMCA.com Protection Status"></a> <script src="//images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
+<a href="https://www.dmca.com/compliance/betpuanuyelik.com" title="DMCA Compliance information for betpuanuyelik.com"><img src="https://www.dmca.com/img/dmca-compliant-grayscale.png" alt="DMCA compliant image" /></a>
   </div>
 
 <!-- Internal Navigation Links -->
