--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>🟢💰 BetPuan Mobil 🎁 Hızlı Bahis & Casino Bonusları | Hoş Geldin</title>
+<title>USDT ile Bahis Oynatan Siteler – Anında Çekim</title>
 <meta name="description" content="BetPuan — Türkiye’nin en hızlı ve güvenilir mobil bahis platformu. 💸 Hoş geldin bonusu, deneme bonussuz kayıt, canlı bahis, casino ve 7/24 hızlı para çekim desteği." />
 <meta name="keywords" content="mobil bahis, bahis siteleri, güvenilir mobil bahis siteleri, deneme bonusu veren bahis siteleri, mobil casino, canlı bahis, lisanslı bahis siteleri, mobil giriş, hızlı para çekme, bahis bonusları" />
   <meta name="robots" content="index, follow" />
